<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.general.mediaplayer.activity.CookingActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/cooking_background"
        android:scaleType="fitXY" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="4">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.35">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="4">

                <Button
                    android:id="@+id/cookingfirst_btn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/category_height"
                    android:theme="@style/category_button"
                    android:text="@string/cooking_btn1"
                    android:background="@color/transparent"
                    android:onClick="onFirstClick"
                    />

                <Button
                    android:id="@+id/cookingsecond_btn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/category_height"
                    android:background="@android:color/transparent"
                    android:text="@string/cooking_btn2"
                    android:theme="@style/category_button"
                    android:onClick="onSecondClick"/>

                <Button
                    android:id="@+id/cookingthird_btn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/category_height"
                    android:background="@android:color/transparent"
                    android:text="@string/cooking_btn3"
                    android:theme="@style/category_button"
                    android:onClick="onThirdClick"/>

                <Button
                    android:id="@+id/cookingfourth_btn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/category_height"
                    android:background="@android:color/transparent"
                    android:text="@string/cooking_btn4"
                    android:theme="@style/category_button"
                    android:onClick="onFourthClick"/>

                <Button
                    android:id="@+id/cookingfifth_btn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/category_height"
                    android:background="@android:color/transparent"
                    android:text="@string/cooking_btn5"
                    android:theme="@style/category_button"
                    android:onClick="onFifthClick"/>

                <Button
                    android:id="@+id/cookingsixth_btn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/category_height"
                    android:background="@android:color/transparent"
                    android:text="@string/cooking_btn6"
                    android:theme="@style/category_button"
                    android:onClick="onSixthClick"/>

                <Button
                    android:id="@+id/cookingseventh_btn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/category_height"
                    android:background="@android:color/transparent"
                    android:text="@string/cooking_btn7"
                    android:theme="@style/category_button"
                    android:onClick="onSeventhClick"/>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <Button
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:textSize="15sp"
        android:background="@drawable/back_button"
        android:textColor="@android:color/darker_gray"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:onClick="onBack"/>

</RelativeLayout>
